--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -23,7 +23,7 @@
 
     <p>
         <%= form.label :text %><br>
-        <%= from.test_area :text %>
+        <%= form.text_area :text %>
     </p>
 
     <% end %>
