--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -1,3 +1,66 @@
 // Place all the styles related to the Articles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.container-article-index {
+    background-color: white;
+    margin-bottom: 1em; 
+    padding-bottom: 3em;
+    padding-top: 3em;
+    width: 60vw;
+    margin-left: 17vw;
+}
+
+.container-preview{
+    display: inline-block;
+}
+
+.preview-img-article-index {
+    height: 15em;
+    width: 21.5em;
+    margin-right: .5em;
+    margin-bottom: 2em;
+  }
+
+  .show-body {
+       background-color: white;
+       text-align: left;
+       width: 60vw;
+       margin-left: 17vw;
+       padding: 3em;
+       font-size: .5rem;
+  }
+  .dropbtn {
+    background-color: black;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+  }
+  
+  .dropdown {
+    float: left;
+    position: relative;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    list-style-type: none;
+  }
+  
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  .dropdown:hover .dropbtn {background-color: rgb(51, 51, 51);}
