--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,7 @@
 
+
+
+
 <%= form_with model: @article, local: true do |form| %>
 
     <% if @article.errors.any? %>
@@ -20,23 +23,29 @@
         <%= form.text_field :title %>
     </p>
     <p>
+        <%= form.label :tag_list, "Tags (separated by commas)" %><br />
+        <%= form.text_field :tag_list %>
+    </p>
+    <p>
         <%= form.label :picture %><br>
         <%= form.text_field :picture%>
     </p>
 
     <p>
+        
         <%= form.label :text %><br>
-        <%= form.text_area :text %>
-    </p>
+        <div class="markdown-editor">
+            <%= form.text_area :text %>
+        </div>
+    </p>    
 
     <p>
         <%= form.submit %>
     </p>
-
 <% end %>
-<link rel="stylesheet" href="http://lab.lepture.com/editor/editor.css" />
-<script type="text/javascript" src="http://lab.lepture.com/editor/editor.js"></script>
-<script type="text/javascript" src="http://lab.lepture.com/editor/marked.js"></script>
-<script>var editor = new Editor();
-editor.render();</script>
 
+
+<script>
+var editor = new Editor();
+editor.render();
+</script>
