--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,25 +1,25 @@
 <div class="center jumbotron">
-    <h1>Listing articles</h1>
+    <h1>Lessons, Ramblings, and Rants</h1>
+    <h4>Welcome to my blog, here I talk about lessons I've learned, attempt writing about my favorite 
+    sports team(Pittsburgh Pirates), and give tips about making it through a coding bootcamp</h4>
 
-    <%= link_to 'New article', new_article_path %>
-
-    <table>
-        <tr>
-            <th>Title</th>
-            <th>Text</th>
-            <th colspan="2"></th>
-        </tr>
-
-        <% @articles.each do |article| %>
-            <tr>
-                <td><%= article.title %></td>
-                <td><%= Redcarpet::Markdown.new(Redcarpet::Render::HTML).render(article.text).html_safe %></td>
-                <td><%= link_to 'Show', article_path(article) %></td>
-                <td><%= link_to 'Edit', edit_article_path(article) %></td>
-                <td><%= link_to 'Destroy', article_path(article),
-                        method: :delete,
-                        data: { confirm: 'Are you sure?' } %></td>
-            </tr>
+    <div class="dropdown">
+          <button class="dropbtn">Filter By Tag</button>
+            <div class="dropdown-content">
+                <%= link_to 'All', articles_path %>
+                <% @tags.each do |tag|  %>
+                    <%= link_to tag.body, tag_path(tag.body) %>
+                <% end %>
+            </div>
+    </div>
+    <div class="container-article-index">        
+        <% @articles.reverse.each do |article| %>
+        <div class="container-preview">
+            <%= link_to article.title, article_path(article), class:"article-link" %>
+            <%= link_to article_path(article) do %>
+                <%= image_tag article.picture, class:"preview-img-article-index" %>
+            <% end %>
+            </div>
         <% end %>
-    </table>
+    </div>
 </div>
