--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,14 +1,13 @@
 <div class="center jumbotron">
     <p>
-        <strong>Title:</strong>
         <%= @article.title %>
     </p>
 
     <p>
-        <strong>Text:</strong>
-        <%= Redcarpet::Markdown.new(Redcarpet::Render::HTML).render(@article.text).html_safe %>
+        <div class="show-body">
+            <%= Redcarpet::Markdown.new(Redcarpet::Render::HTML).render(@article.text).html_safe %>
+        </div>
     </p>
-
-    <%= link_to 'Edit', edit_article_path(@article) %> | 
+    
     <%= link_to 'Back', articles_path %> 
 </div>
