--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,8 @@
     <div class="container"> 
         <div class="Footer"><a href="https://www.linkedin.com/in/michael-huffman-60137b59/" target="_blank">LinkedIn</a> |
-        <a href="https://github.com/huffman442" target="_blank">GitHub</a> | <a href="https://www.codewars.com/users/huffman442" target="_blank">Codewars</a></div>
+        <a href="https://github.com/huffman442" target="_blank">GitHub</a> | <a href="https://www.codewars.com/users/huffman442" target="_blank">Codewars</a></div><br />
+        <% if current_user %>
+            Logged in as <%= current_user.email %>.
+            <%= link_to "Log Out", logout_path %>
+        <% end %>
     </div>
