--- a/app/views/admin/articles/index.html.erb
+++ b/app/views/admin/articles/index.html.erb
@@ -12,6 +12,7 @@
                 <% end %>
             </div>
     </div>
+    
     <div class="container-article-index">        
         <% @articles.reverse.each do |article| %>
         <div class="container-preview">
@@ -19,6 +20,10 @@
             <%= link_to admin_article_path(article) do %>
                 <%= image_tag article.picture, class:"preview-img-article-index" %>
             <% end %>
+            <%= link_to 'Edit', edit_admin_article_path(article) %>
+            <%= link_to 'Destroy', admin_article_path(article),
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %>
             </div>
         <% end %>
     </div>
