--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,6 +1,5 @@
 <h1>Administration</h1>
 
 <ul>
-  <li><%= link_to 'Manage Users' %></li>
-  <li><%= link_to 'Manage Articles', admin_articles_path %></li>
+  <%= link_to 'Manage Articles', admin_articles_path %>
 </ul>
