--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <div class="main">
     <div class="container">
         <h1 class="Header">Michael Huffman</h1><br>
-        <h2 class="Header">Aspiring Developer, Tinkerer, Optimizer, and Music Lover</h2>
+        <h2 class="Header">Aspiring Developer, Tinkerer, and Music Lover</h2>
     </div>
     <div class="container">
         <div class="active" id="normal">
