--- a/app/views/layouts/_work_history_deep.html.erb
+++ b/app/views/layouts/_work_history_deep.html.erb
@@ -1,8 +1,9 @@
 <h2>Work History</h2>
     <div>
-        <h5 class = "jobtitle">Kitchen Manager, Oct. 2015 - Jun. 2018</h5>
-            <div class = "workblocks">
-            Café Sam, Bloomfield, PA
+        <div class = "workblocks">
+            <%= image_tag "30th_anniversary_website_logo.png" %>
+            <h3>Café Sam, Bloomfield, PA</h3>
+            <h4 class = "jobtitle">Kitchen Manager, Oct. 2015 - Jun. 2018</h4>
             <ul>
                 <li>Created special dishes on a monthly basis</li>
                 <li>Created passed hors d'oeuvres on a daily basis</li>
@@ -13,10 +14,10 @@
             So what?....
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mi eget mauris pharetra et ultrices. Posuere sollicitudin aliquam ultrices sagittis. Mauris sit amet massa vitae tortor condimentum lacinia quis. Quam vulputate dignissim suspendisse in.
             </div>
-        
-        <h5 class = "jobtitle">Unit Leader, Summers of 2011-2013, 2015</h5>
         <div class = "workblocks">
-        Camp Lutherlyn, Prospect, PA
+        <%= image_tag "green-transparent-no-tagline-6d56684e43ac68ef8323ff0500fb202c.png" %>
+        <h3>Camp Lutherlyn, Prospect, PA</h3>
+        <h4 class = "jobtitle">Unit Leader, Summers of 2011-2013, 2015</h4>
         <ul>
             <li>Supervised and managed a staff of 50 young adult counselors</li>
             <li>Organized and facilitated weekly schedules for multiple programs simultaneously</li>
@@ -26,9 +27,10 @@
         So what?....
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mi eget mauris pharetra et ultrices. Posuere sollicitudin aliquam ultrices sagittis. Mauris sit amet massa vitae tortor condimentum lacinia quis. Quam vulputate dignissim suspendisse in.
     </div>
-        <h5 class = "jobtitle">Cook, February – May 2015</h5>
-        <div class = "workblocks">
-        Blackbear Burritos, Morgantown, WV
+    <div class = "workblocks">
+        <%= image_tag("BlackBear-logo.png") %>
+       <h3> Blackbear Burritos, Morgantown, WV</h3>
+        <h4 class = "jobtitle">Cook, February – May 2015</h4>
         <ul>
             <li>Prepared recipes with strong attention to detail</li>
             <li>Managed prep tasks in a timely and efficient manner</li>
