--- a/app/views/layouts/_work_history_lite.html.erb
+++ b/app/views/layouts/_work_history_lite.html.erb
@@ -1,26 +1,30 @@
 <h2>Work History</h2>
-    <div>
+<div>
+    <div class = "workblocks">
+        <%= image_tag "30th_anniversary_website_logo.png" %>
+        <h3>Café Sam, Bloomfield, PA</h4>
         <h4 class = "jobtitle">Kitchen Manager, Oct. 2015 - Jun. 2018</h4>
-            <div class = "workblocks">
-                Café Sam, Bloomfield, PA
-                <ul>
-                    <li>Manager, Trainer, Adapter, Leader</li>
-                </ul>
-            </div>
+        <ul>
+            <li>Manager, Trainer, Adapter, Leader</li>
+        </ul>
+    </div>
         
-        <h5 class = "jobtitle">Unit Leader, Summers of 2011-2013, 2015</h5>
-        <div class = "workblocks">
-        Camp Lutherlyn, Prospect, PA
+        
+    <div class = "workblocks">
+        <%= image_tag "green-transparent-no-tagline-6d56684e43ac68ef8323ff0500fb202c.png" %>
+        <h3>Camp Lutherlyn, Prospect, PA</h4>
+        <h4 class = "jobtitle">Unit Leader, Summers of 2011-2013, 2015</h5>
         <ul>
             <li>Supervisor, Facilitator, Coordinator</li>
         </ul>
     </div>
-        <h5 class = "jobtitle">Cook, February – May 2015</h5>
-        <div class = "workblocks">
-        Blackbear Burritos, Morgantown, WV
+    <div class = "workblocks">
+        <%= image_tag "BlackBear-logo.png" %>
+        <h3>Blackbear Burritos, Morgantown, WV</h4>
+        <h4 class = "jobtitle">Cook, February – May 2015</h5>
         <ul>
             <li>Learner, Multitasker, Listener</li>
         </ul>
     </div>
-            
-    </div>
+        
+</div>
