--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -7,11 +7,14 @@
 
 .workblocks {
   margin-top: 2.5em;
+  margin-bottom: 1em;
+  height: 30vh;
   img{ 
-    margin-top: 0em;
+    
     width: 10vw;
     float:left;
     margin: 1.25em;
+    margin-top: 0em;
   }
   li{
     font-weight: normal;
